[gd_scene load_steps=3 format=3 uid="uid://dfk1issxnp1k"]

[ext_resource type="Script" path="res://batch_embedding.gd" id="1_vupcq"]

[sub_resource type="LabelSettings" id="LabelSettings_6qyb2"]
font_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vupcq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "User"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="InputEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 120)
layout_mode = 2
size_flags_horizontal = 3
text = "I love music
I hate music
I adore music
I am not a fan of music."
wrap_mode = 1

[node name="TaskTypeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Embeddings"

[node name="FinishedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyb2")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResponseEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 140)
layout_mode = 2
size_flags_horizontal = 3
editable = false
wrap_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
